[package]
name = "vrf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.26"
solana-transaction-status = "~1.14"
vrf = "0.2"
vrf-sdk = { path = "../vrf-sdk" }

tokio = { version = "1.25", features = [ "full" ] }
futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1.0"
once_cell = "1.17"
regex = "1.7"
backoff = { version = "0.4", features = [ "tokio" ] }
bytemuck = "1.13"

config = "0.13"
serde = "1.0"
serde_with = "2.2"
borsh = "0.10"
base64 = "0.21"
