[package]
name = "anchor-using-vrf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "~0.26"
solana-program = "~1.14"
vrf-sdk = { path = "../../vrf-sdk" }
